other/check-vpa-configuration/.chainsaw-test/bad.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: bad-busybox
  name: bad-busybox
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bad-busybox
  template:
    metadata:
      labels:
        app: bad-busybox
    spec:
      containers:
      - image: busybox:latest
        name: bad-busybox
        command:
        - "sleep"
        - "3000"
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: bad-ds-busybox
spec:
  selector:
    matchLabels:
      name: bad-daemonset
  template:
    metadata:
      labels:
        name: bad-daemonset
    spec:
      containers:
      - image: busybox:latest
        name: busybox
        command:
        - "sleep"
        - "3000"
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: bad-ss-busybox
spec:
  selector:
    matchLabels:
      app: bad-busybox
  serviceName: busyservice
  replicas: 1
  minReadySeconds: 10
  template:
    metadata:
      labels:
        app: bad-busybox
    spec:
      containers:
      - image: busybox:latest
        name: busybox
        command:
        - "sleep"
        - "3000"
