other/check-vpa-configuration/.chainsaw-test/good.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: good-busybox
  name: good-busybox
spec:
  replicas: 1
  selector:
    matchLabels:
      app: good-busybox
  template:
    metadata:
      labels:
        app: good-busybox
    spec:
      containers:
      - image: busybox:latest
        name: good-busybox
        command:
        - "sleep"
        - "3000"
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: good-ds-busybox
spec:
  selector:
    matchLabels:
      name: good-daemonset
  template:
    metadata:
      labels:
        name: good-daemonset
    spec:
      containers:
      - image: busybox:latest
        name: good-busybox
        command:
        - "sleep"
        - "3000"
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: good-ss-busybox
spec:
  selector:
    matchLabels:
      app: good-busybox
  serviceName: busyservice
  replicas: 1
  minReadySeconds: 10
  template:
    metadata:
      labels:
        app: good-busybox
    spec:
      containers:
      - image: busybox:latest
        name: good-busybox
        command:
        - "sleep"
        - "3000"
