other/check-vpa-configuration/.chainsaw-test/prereq.yaml
apiVersion: autoscaling.k8s.io/v1
kind: VerticalPodAutoscaler
metadata:
  name: autoscaler01
spec:
  targetRef:
    apiVersion: apps/v1
    kind: Deployment
    name: good-busybox
  updatePolicy:
    updateMode: Auto
---
apiVersion: autoscaling.k8s.io/v1
kind: VerticalPodAutoscaler
metadata:
  name: autoscaler02
spec:
  targetRef:
    apiVersion: apps/v1
    kind: DaemonSet
    name: good-ds-busybox
  updatePolicy:
    updateMode: Auto
---
apiVersion: autoscaling.k8s.io/v1
kind: VerticalPodAutoscaler
metadata:
  name: autoscaler03
spec:
  targetRef:
    apiVersion: apps/v1
    kind: StatefulSet
    name: good-ss-busybox
  updatePolicy:
    updateMode: Auto
---
