other/check-vpa-configuration/.chainsaw-test/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: check-vpa-configuration
spec:
  steps:
  - name: 01 - Create policy and Enforce
    try:
    - apply:
        file: ../check-vpa-configuration.yaml
    - patch:
        resource:
          apiVersion: kyverno.io/v1
          kind: ClusterPolicy
          metadata:
            name: check-vpa-configuration
          spec:
            validationFailureAction: Audit
    - assert:
        file: chainsaw-step-01-assert-1.yaml
  - name: 02 - Create VPAs
    try:
    - apply:
        file: prereq.yaml
  - name: 03 - Create bad Resources that do not have a matching VPA
    try:
    - apply:
        file: bad.yaml
        expect:
        - check:
            ($error != null): true
  - name: 04 - Create good Resources that have a matching VPA
    try:
    - apply:
        file: good.yaml
